# goshenv

./: .gitignore  Makefile  README.org  configure.ac  goshenv  prepare-goshenv.sh.in
.github/workflows/: biuld_artifacts.yaml
sub/: goshenv_commands.sh  goshenv_install_gauche.sh  goshenv_main.sh  goshenv_utility.sh
